# Harvey-RLab

./: .gitignore  pyproject.toml
configs/: endpoints.toml
environments/harvey_lab_classic/: README.md  pyproject.toml
environments/harvey_lab_classic/harvey_lab_classic/: __init__.py  dataset.py  environment.py  judge.py  prompts.py  resources.py  scoring.py  tools.py
environments/harvey_lab_classic/harvey_lab_classic/resources/: tool_server.py
environments/harvey_lab_classic/harvey_lab_classic/resources/skills/docx/: SKILL.md
environments/harvey_lab_classic/harvey_lab_classic/resources/skills/xlsx/: SKILL.md
environments/harvey_lab_classic/tests/: test_contracts.py  test_judge.py  test_tool_server.py
environments/harvey_lab_rlm/: .dockerignore  .env.example  AGENTS.md  README.md  pyproject.toml
environments/harvey_lab_rlm/docker/: Dockerfile  parse_doc.py
environments/harvey_lab_rlm/harvey_lab_rlm/: __init__.py  dataset.py  environment.py  judge.py  prompts.py  resources.py  rubric.py  sandbox_runtime.py  worker.py
environments/harvey_lab_rlm/harvey_lab_rlm/resources/skills/docx/: RLM_SKILL.md
environments/harvey_lab_rlm/rlm/: rlm_executor.py  rlm_loop.py  rlm_system_prompt.md  rlm_worker.py  run.py
environments/harvey_lab_rlm/rlm/evaluation/: compare.py  compare_harness_modes.py  judge.py  run_eval.py
environments/harvey_lab_rlm/rlm/skills/xlsx/: RLM_SKILL.md
environments/harvey_lab_rlm/tests/: test_dataset.py  test_environment_contract.py  test_judge.py  test_prompts.py  test_rubric.py  test_sandbox_runtime.py  test_worker_customization.py
