[project]
name = "harvey-lab-classic"
description = "A non-RLM, multi-turn Prime sandbox tool environment for Harvey's Legal Agent Benchmark."
tags = ["legal", "tools", "sandbox", "multi-turn", "train", "eval"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0,<5",
    "huggingface-hub>=0.30,<2",
    "openai>=2.0,<3",
    "pyarrow>=18,<22",
    "python-dotenv>=1.0,<2",
    "verifiers==0.1.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harvey_lab_classic"]

[tool.hatch.build.targets.sdist]
include = [
    "harvey_lab_classic",
    "docker",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1
max_tokens = 8192
