[project]
name = "harvey-lab-rlm"
description = "A Verifiers-compatible recursive language model environment for Harvey's Legal Agent Benchmark."
readme = "README.md"
tags = ["legal", "rlm", "multi-turn", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0,<5",
    "huggingface-hub>=0.30,<2",
    "openai>=2.0,<3",
    "pyarrow>=18,<22",
    "python-dotenv>=1.0,<2",
    "verifiers==0.1.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harvey_lab_rlm"]

[tool.hatch.build.targets.wheel.force-include]
"rlm/skills/docx/RLM_SKILL.md" = "harvey_lab_rlm/resources/skills/docx/RLM_SKILL.md"
"rlm/skills/docx/scripts" = "harvey_lab_rlm/resources/skills/docx/scripts"
"rlm/skills/xlsx/RLM_SKILL.md" = "harvey_lab_rlm/resources/skills/xlsx/RLM_SKILL.md"
"rlm/skills/xlsx/scripts" = "harvey_lab_rlm/resources/skills/xlsx/scripts"

[tool.hatch.build.targets.sdist]
include = [
    "harvey_lab_rlm",
    "docker",
    "README.md",
    "pyproject.toml",
    "rlm/skills/docx/RLM_SKILL.md",
    "rlm/skills/docx/scripts",
    "rlm/skills/xlsx/RLM_SKILL.md",
    "rlm/skills/xlsx/scripts",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1
max_tokens = 8192
